# udsendelse-af-velkomstbrev

./: .gitignore  README.md  changelog.md  pyproject.toml
robot_framework/: config.py  process.py
robot_framework/custom/: digital_post_composer.py  keyvault.py  mail_merge.py  sql_data.py
robot_framework/template/: Welcome letter to internationals.docx  Welcome letter to internationals_noname.docx
